<resources>
    <string name="app_name">Mobile Health App</string>
    <string name="action_settings">Configurar</string>
    <string name="action_restart">Reiniciar</string>
    <string name="action_sync">Sincronizar Conta Web</string>
    <string name="label_heart_rate">BPM</string>
    <string name="label_desc_heart_rate">Frequência cardíaca</string>
    <string name="heart_rate">0</string>
    <string name="loading">Aguarde, sincronizando...</string>
    <string name="description_refresh">Atualizar</string>
    <string name="description_delete_all_msg">Excluir todas mensagens</string>
    <string name="description_previous">Voltar</string>
    <string name="exit_question">Tem certeza que deseja sair do monitoramento?</string>
    <string name="delete_question">Tem certeza que deseja excluir a mensagem?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="intro_text">Aponte a câmera para o Qrcode</string>
    <string name="restart_activity">Reiniciar Leitura</string>
    <string name="stop_start_qreader">Voltar</string>
    <string name="detail_msg">Mensagem vazia</string>
    <string name="image">img</string>
    <string name="emergency">Emergência</string>
    <string name="message">Mensagem</string>
    <string name="label_emergency">Em caso de emergência mantenha o botão pressionado por 3 segundos:</string>
    <string name="labelMonitorando">Monitorando:</string>
    <string name="passosLabel">Passos</string>
    <string name="distanciaLabel">Distância</string>
    <string name="calorias">Calorias</string>
    <string name="heartsimbol">♥</string>
</resources>
